IDs générique sur les tests